eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cv-builder-api-service
spec:
  selector:
    app: cv-builder-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
