eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-builder-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /cv-builder
            pathType: Prefix
            backend:
              service:
                name: cv-builder-api-service
                port:
                  number: 80
